--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div>PRIMERA LINEA</div>
-    
+    <div>SEGUNDA LINEA</div>
+    <div>TERCERA LINEA</div>
+    <div>CUARTA LINEA</div>
+    <div>QUINTA LINEA</div>
 </body>
 </html>
