--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Mi pagina web</title>
 </head>
 <body>
-    <div>PRIMERA LINEA</div>
-    <div>SEGUNDA LINEA</div>
+    <div><h1>PRIMERA LINEA</h1></div>
+    <div><h2>SEGUNDA LINEA</h2></div>
     <div>TERCERA LINEA</div>
     <div>CUARTA LINEA</div>
     <div>QUINTA LINEA</div>
+    <div>SEXTA LINEA</div>
+    <div>SÉPTIMA LINEA</div>
+    <div>OCTAVA LINEA</div>
 </body>
 </html>
